# BazyDanychJachtyApp

./: .gitignore  CMakeLists.txt  README.md  Theme.cpp  addcoownerwindow.cpp  addcoownerwindow.h  addcoownerwindow.ui  changeownerwindow.cpp  changeownerwindow.h  changeownerwindow.ui  config.json  databasemanager.cpp  databasemanager.h  login.cpp  login.h  login.ui  main.cpp  mainappwindow.cpp  mainappwindow.h  mainappwindow.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  removecoownerwindow.cpp  removecoownerwindow.h  removecoownerwindow.ui  selectyachtwindow.cpp  selectyachtwindow.h  selectyachtwindow.ui  signalkimporter.cpp  signalkimporter.h  theme.h  tripaddwindow.cpp  tripaddwindow.h  tripaddwindow.ui  tripdatawindow.cpp  tripdatawindow.h  tripdatawindow.ui  tripviewwindow.cpp  tripviewwindow.h  (+7 more)
